adding sdist zip output

--- a/.azure-pipelines/warden.yml
+++ b/.azure-pipelines/warden.yml
@@ -21,6 +21,7 @@ jobs:
   - script: |
       cd $(Build.SourcesDirectory)/packages/python-packages/doc-warden/
       python setup.py bdist_wheel -d $(Build.ArtifactStagingDirectory)
+      python setup.py sdist -d $(Build.ArtifactStagingDirectory) --format zip
     displayName: 'Build Package'
 
   - script: |
