--- a/.azure-pipelines/dotnet.yml
+++ b/.azure-pipelines/dotnet.yml
@@ -35,21 +35,8 @@ jobs:
 
   - job: 'Test'
 
-    strategy:
-      maxParallel: $[ variables['MaxParallelTestJobs'] ]
-      matrix:
-        Linux:
-          OSName: 'Linux'
-          OSVmImage: 'ubuntu-16.04'
-        Windows:
-          OSName: 'Windows'
-          OSVmImage: 'vs2017-win2016'
-        MacOs:
-          OSName: 'MacOS'
-          OSVmImage: 'macOS-10.13'
-
     pool:
-      vmImage: '$(OSVmImage)'
+      vmImage: 'vs2017-win2016'
 
     steps:
       - task: DotNetCoreInstaller@0
@@ -59,7 +46,6 @@ jobs:
 
       - task: DotNetCoreCLI@2
         displayName: 'Build & Test'
-#        condition: eq(variables['System.TeamProject'], 'public')
         env:
           DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
           DOTNET_CLI_TELEMETRY_OPTOUT: 1
@@ -73,6 +59,6 @@ jobs:
         condition: succeededOrFailed()
         inputs:
           testResultsFiles: '**/*.trx'
-          testRunTitle: '$(OSName) DotNet $(DotNetCoreVersion)'
+          testRunTitle: 'Windows DotNet $(DotNetCoreVersion)'
           testResultsFormat: 'VSTest'
           mergeTestResults: true
