Add versioning support props and targets
Mostly follows https://github.com/dotnet/arcade/blob/master/Documentation/CoreVersioning.md
but uses the full date for package version instead of the short date we need to use
for file versioning.

--- a/eng/Directory.Build.targets
+++ b/eng/Directory.Build.targets
@@ -18,4 +18,5 @@
     <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)AzureSDKToolsKey.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
+  <Import Project="Versioning.targets" />
 </Project>
