This PR contains tooling support for Azure management plane SDKs for following repositories 1. azure-sdk-for-net 2. Fluent .NET SDK 3. Multi-Api-Sdk
Pre-req:
Install dotnet SDK 2.2.300 prior using toolset
https://dotnet.microsoft.com/download/dotnet-core/2.2

This PR contains following functionality:
1. All build tools wrapped as nuget package (no longer have to download prior to build)
2. Toolset is .NET Core based. Same set of build targets will work cross platform. Tested on mac.
3. Ability to detect PR validation CI runs and find appropriate SDKs to build based on the PR
4. Based on the SDK, it detects appropriate test projects within the same scope
5. Supports parity build scenarios that worked earlier.
6. This PR currently supports all parity searching projects scenarios based on following criteria
 6.1 Search projects when no scope is provided
 6.2 Search projects when scope is provided (partial scope)
 6.3 Search projects when fully qualified scope dir path is provided
 6.4 Search projects when ProjectType is specified
 6.5 Search projects when ProjectCategory is specified (not extensively tested/checked for data plane project types, as data plane decided not to participate in this workflow)
 6.6 Search projects when Include/Exclude tokens are specified at command line
 6.7 Search project honoring exclusion/inclusion settings specified in project files (swagger to SDK scenarios)

7. Ability to get KeyVault secrets.
8. KV auth based on SPN (SPN has to be configured based on new KV)
9. Added tests

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-build/
+#build/
 develop-eggs/
 dist/
 downloads/
@@ -286,7 +286,7 @@ publish/
 PublishScripts/
 
 # NuGet Packages
-*.nupkg
+#*.nupkg
 # The packages folder can be ignored because of Package Restore
 **/[Pp]ackages/*
 # except build/, which is used as an MSBuild target.
@@ -294,8 +294,8 @@ PublishScripts/
 # Uncomment if necessary however generally it will be regenerated when needed
 #!**/[Pp]ackages/repositories.config
 # NuGet v3's project.json files produces more ignorable files
-*.nuget.props
-*.nuget.targets
+#*.nuget.props
+#*.nuget.targets
 
 # Microsoft Azure Build Output
 csx/
@@ -448,3 +448,9 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
+
+# management build tools related
+tools/LocalNugetFeed/Microsoft.Internal.NetSdkBuild.Mgmt.Tools.*.nupkg
+restoredPackages/
+src/dotnet/Mgmt.CI.BuildTools/NugetToolsPackage/CI.Tools.Package/build/tasks/net461/
+src/dotnet/Mgmt.CI.BuildTools/NugetToolsPackage/CI.Tools.Package/build/tasks/netstandard2.0
