--- a/NuGet.Config
+++ b/NuGet.Config
@@ -3,18 +3,11 @@
 	<packageSources>
 		<add key="NugetOfficialV3" value="https://api.nuget.org/v3/index.json" />
 		<add key="Local" value="tools/LocalNugetFeed" />
+		<add key="AzArtifactsFeed" value="https://azuresdkartifacts.blob.core.windows.net/azure-sdk-tools/index.json" />
 	</packageSources>
 	
 	<config>
 		<add key="globalPackagesFolder" value="restoredPackages" />
 		<add key="RestorePackagesPath" value="restoredPackages" />
 	</config>
-  
-	<packageRestore>
-		<!-- Allow NuGet to download missing packages -->
-		<add key="enabled" value="True" />
-
-		<!-- Automatically check for missing packages during build in Visual Studio -->
-		<add key="automatic" value="True" />
-	</packageRestore>
 </configuration>
