--- a/src/dotnet/Mgmt.CI.BuildTools/CI/CI.BuildTasks/Tests/CI.BuildTasks.Tests/Tests.CI.BuildTasks.csproj
+++ b/src/dotnet/Mgmt.CI.BuildTools/CI/CI.BuildTasks/Tests/CI.BuildTasks.Tests/Tests.CI.BuildTasks.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Setup.Configuration.Interop" Version="1.16.30" />
+    <!--<PackageReference Include="Microsoft.VisualStudio.Setup.Configuration.Interop" Version="1.16.30" />-->
     <PackageReference Include="NuGet.Packaging" Version="4.9.2" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
