--- a/src/dotnet/Mgmt.CI.BuildTools/CI/CI.Common/Mgmt.CI.Common/MS.Az.Mgmt.CI.Common.csproj
+++ b/src/dotnet/Mgmt.CI.BuildTools/CI/CI.Common/Mgmt.CI.Common/MS.Az.Mgmt.CI.Common.csproj
@@ -5,7 +5,6 @@
     <Description>Azure SDK build common </Description>
     <AssemblyTitle>Microsoft.Azure.NetSdk.Build.Common</AssemblyTitle>
     <AssemblyName>MS.Az.Mgmt.NetSdk.BuildTasks.Common</AssemblyName>
-    <Version>$(PackageVersion)</Version>
   </PropertyGroup>
   <PropertyGroup>
 		<TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
@@ -20,7 +19,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Octokit" Version="0.32.0" />
-    <PackageReference Include="Microsoft.Azure.KeyVault" Version="3.0.99-private" />
+    <PackageReference Include="Microsoft.Azure.KeyVault" Version="3.0.3" />
+    <!--<PackageReference Include="Microsoft.Azure.KeyVault" Version="3.0.99-private" />-->
     <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="4.5.0" />      
     <PackageReference Include="System.Net.Requests" Version="4.3.0" />
   </ItemGroup>
