--- a/src/dotnet/Mgmt.CI.BuildTools/ci.common.props
+++ b/src/dotnet/Mgmt.CI.BuildTools/ci.common.props
@@ -1,6 +1,6 @@
 ﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
-		<PackageVersion>0.9.0-preview</PackageVersion>
+		<VersionPrefix>0.9.0</VersionPrefix>
 		<AsmVersion>0.9.0</AsmVersion>
 		<AsmFileVersion>0.9.0</AsmFileVersion>
 	</PropertyGroup>
