--- a/src/dotnet/Mgmt.CI.BuildTools/CI/CI.Common/Mgmt.CI.Common/MS.Az.Mgmt.CI.Common.csproj
+++ b/src/dotnet/Mgmt.CI.BuildTools/CI/CI.Common/Mgmt.CI.Common/MS.Az.Mgmt.CI.Common.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
   <PropertyGroup>
 		<TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <!-- Their is an issue building dependencies that have platform specific dependencies -->
