--- a/src/dotnet/Mgmt.CI.BuildTools/CI/CI.Common/Tests/Tests.CI.Common.csproj
+++ b/src/dotnet/Mgmt.CI.BuildTools/CI/CI.Common/Tests/Tests.CI.Common.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
