--- a/.azure-pipelines/js.yml
+++ b/.azure-pipelines/js.yml
@@ -84,47 +84,8 @@ jobs:
 
   - job: "Test"
 
-    strategy:
-      matrix:
-        Linux_Node8:
-          OSName: "Linux"
-          OSVmImage: "ubuntu-16.04"
-          NodeVersion: "8.x"
-        Linux_Node10:
-          OSName: "Linux"
-          OSVmImage: "ubuntu-16.04"
-          NodeVersion: "10.x"
-        Linux_Node12:
-          OSName: "Linux"
-          OSVmImage: "ubuntu-16.04"
-          NodeVersion: "12.x"
-        macOS_Node8:
-          OSName: "macOS"
-          OSVmImage: "macOS-10.13"
-          NodeVersion: "8.x"
-        macOS_Node10:
-          OSName: "macOS"
-          OSVmImage: "macOS-10.13"
-          NodeVersion: "10.x"
-        macOS_Node12:
-          OSName: "macOS"
-          OSVmImage: "macOS-10.13"
-          NodeVersion: "12.x"
-        Windows_Node8:
-          OSName: "Windows"
-          OSVmImage: "vs2017-win2016"
-          NodeVersion: "8.x"
-        Windows_Node10:
-          OSName: "Windows"
-          OSVmImage: "vs2017-win2016"
-          NodeVersion: "10.x"
-        Windows_Node12:
-          OSName: "Windows"
-          OSVmImage: "vs2017-win2016"
-          NodeVersion: "12.x"
-
     pool:
-      vmImage: "$(OSVmImage)"
+      vmImage: "ubuntu-16.04"
 
     steps:
       - task: NodeTool@0
