--- a/src/dotnet/Mgmt.CI.BuildTools/CI/CI.Common/Mgmt.CI.Common/MS.Az.Mgmt.CI.Common.csproj
+++ b/src/dotnet/Mgmt.CI.BuildTools/CI/CI.Common/Mgmt.CI.Common/MS.Az.Mgmt.CI.Common.csproj
@@ -16,6 +16,8 @@
     <PlatformTarget>$(FullNetFxBitness)</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="ExecProcess\CSCExec.cs" />
+    <Compile Remove="ExecProcess\DotNetExec.cs" />
     <Compile Remove="Models\SdkProjectMetaData.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -23,7 +25,9 @@
     <PackageReference Include="Microsoft.Azure.KeyVault" Version="3.0.3" />
     <!--<PackageReference Include="Microsoft.Azure.KeyVault" Version="3.0.99-private" />-->
     <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="4.5.0" />      
-    <PackageReference Include="System.Net.Requests" Version="4.3.0" />
+    <PackageReference Include="System.Net.Requests" Version="4.3.0" />      
+    <PackageReference Include="System.Reflection.MetadataLoadContext" Version="4.6.0-preview6.19303.8" />      
+    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
     <PackageReference Include="NuGet.Versioning" Version="4.9.2" />
