ASP.NET Core Web Application for APIView (#61)
* Basic web app with semi-complete file upload ability

* Clean solution to fix loading issue

* Proper line breaks in generated assembly model HTML

* Remove API key

* Basic DLL upload/viewing functionality

* Add delete page

* Rename 'Create' to 'Upload'

* Change target framework

* Add storage config class and upload/download with streams

* Address code review comments

* Fix test failures

* Remove SharedResources folder

* Updated dotnetcore version in dotnet.yml

* Actually updated version of dotnet

* Update dotnet.yml

* Revert dotnet version, disable warnings as errors

* Disable warnings as errors in TestLibrary

* Disable

--- a/src/dotnet/APIView/TestLibrary/TestLibrary.csproj
+++ b/src/dotnet/APIView/TestLibrary/TestLibrary.csproj
@@ -4,11 +4,10 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+  <PropertyGroup>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <WarningsAsErrors />
     <WarningLevel>0</WarningLevel>
-    <NoWarn>;NU5105</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
