move .gitignore to a more global scope

--- a/.gitignore
+++ b/.gitignore
@@ -454,3 +454,6 @@ tools/LocalNugetFeed/Microsoft.Internal.NetSdkBuild.Mgmt.Tools.*.nupkg
 restoredPackages/
 src/dotnet/Mgmt.CI.BuildTools/NugetToolsPackage/CI.Tools.Package/build/tasks/net461/
 src/dotnet/Mgmt.CI.BuildTools/NugetToolsPackage/CI.Tools.Package/build/tasks/netstandard2.0
+
+# Visual Studio launch settings (frequently user-specific)
+launchSettings.json
