--- a/src/dotnet/Mgmt.CI.BuildTools/CI/CI.BuildTasks/Mgmt.CI.BuildTasks/MS.Az.Mgmt.CI.BuildTasks.csproj
+++ b/src/dotnet/Mgmt.CI.BuildTools/CI/CI.BuildTasks/Mgmt.CI.BuildTasks/MS.Az.Mgmt.CI.BuildTasks.csproj
@@ -14,7 +14,7 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <PropertyGroup>
-		<TargetFrameworks>net461;netstandard2.0</TargetFrameworks>		
+		<TargetFrameworks>net461;netstandard2.0;netcoreapp2.1</TargetFrameworks>		
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="Models\Backup_SdkProjectMetaData.cs" />
