--- a/src/dotnet/Mgmt.CI.BuildTools/CI/CI.Common/Mgmt.CI.Common/MS.Az.Mgmt.CI.Common.csproj
+++ b/src/dotnet/Mgmt.CI.BuildTools/CI/CI.Common/Mgmt.CI.Common/MS.Az.Mgmt.CI.Common.csproj
@@ -7,7 +7,7 @@
     <AssemblyName>MS.Az.Mgmt.NetSdk.BuildTasks.Common</AssemblyName>
   </PropertyGroup>
   <PropertyGroup>
-		<TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
+		<TargetFrameworks>net461;netstandard2.0;netcoreapp2.1</TargetFrameworks>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
