--- a/src/dotnet/Mgmt.CI.BuildTools/NugetToolsPackage/CI.Tools.Package/nuspec/Microsoft.Internal.AzNetSdk.CITools.nuspec
+++ b/src/dotnet/Mgmt.CI.BuildTools/NugetToolsPackage/CI.Tools.Package/nuspec/Microsoft.Internal.AzNetSdk.CITools.nuspec
@@ -20,8 +20,8 @@
     <file src="..\build\tasks\**\*.*" target="tasks" />
     <file src="..\build\Sdk\*.*" target="Sdk" />
     <file src="..\build\psModules\**\*.*" target="psModules" />
-    <file src="..\build\tasks\netstandard2.0\**\*.*" target="tasks\netstandard2.0" />
-    <file src="..\build\tasks\netcoreapp2.1\**\*.*" target="tasks\netstandard2.0" />
+    <file src="..\build\tasks\netstandard2.0\**\*.*" target="tasks\netstandard2.0" />    
+    <!-- <file src="..\build\tasks\netcoreapp2.1\**\*.*" target="tasks\netcoreapp2.1" /> -->
     <file src="..\build\tasks\net461\**\*.*" target="tasks\net461" />
   </files>  
 </package>
