--- a/src/dotnet/Mgmt.CI.BuildTools/ci.common.props
+++ b/src/dotnet/Mgmt.CI.BuildTools/ci.common.props
@@ -6,12 +6,14 @@
 	</PropertyGroup>
 	<PropertyGroup>
 		<FullNetFxBitness>AnyCPU</FullNetFxBitness>
-		<CurrentTargetFxVersion>net461;netstandard2.0;netcoreapp2.1</CurrentTargetFxVersion>
+		<CurrentTargetFxVersion>net461;netstandard2.0</CurrentTargetFxVersion>
 		<TargetFrameworks>$(CurrentTargetFxVersion)</TargetFrameworks>
 		<OutputPath>$(CIBuildOutputDir)</OutputPath>
 		<SignAssembly>false</SignAssembly>
 		<DelaySign>false</DelaySign>
-		<!-- <AssemblyOriginatorKeyFile>$(RepoToolsDir)\MgmtNetSdkToolsKey.snk</AssemblyOriginatorKeyFile> -->
+		<!-- <AssemblyOriginatorKeyFile>$(RepoToolsDir)\MgmtNetSdkToolsKey.snk</AssemblyOriginatorKeyFile> 
+		;netcoreapp2.1
+		-->
 	</PropertyGroup>
 
   <!--TestLoaded property is being set in test project file-->
