Add eslint-plugin-azure-sdk (#53)
* Initial commit

* remove link to sdk repo from README

* add gitignore

* yeoman setup

* update package.json with json library, keywords, and repository info

* reconfigure package.json

* attempt at including json processor

* styling

* move json processor import to lib/index.js

* add .eslintrc

* remove json plugin from .eslintrc

* update json processor with variable assignment

* add first rule (empty) to lib and tests

* create docs folder with first rule

* starter docs for ts-config-strict

* Fix sample JSON syntax

* forgot a comma

* setup ts-config-strict (empty create method)

* attempt at esquery syntax

* forgot a colon

* change typescript version to one currently compatible with eslint

* esquery works, need to get processor running and handle invalid case properly

* use require instead of import in index

* temporary fix to json processing

* hacky workaround to what seems to be deficiencies in ruletester, will implement reports to verify

* report on ts-config-strict failure

* identify compilerOptions.strict value in ts-config-strict error message

* ensure proper nesting in json for ts-config-strict

* create helper to feed processor information to RuleTester

* add header to processTests.js

* change Object.Assign to Object.Create to avoid modifying in-place

* better handle how current filename detection works

* more comprehensive tests (still need to implement robust structural tests)

* check that compilerOptions is in the outermost level

* modify checking for compilerOptions to look for existence at outermost level of the object

* forgot to save on top of previous commit

* check that strict is a member of compilerOptions

* make strict-checking esquery case more specific

* change rule url to official docs

* remove rules folder from docs (urls will point to official guideline documentation)

* make nested value checking

--- a/.gitignore
+++ b/.gitignore
@@ -455,5 +455,12 @@ restoredPackages/
 src/dotnet/Mgmt.CI.BuildTools/NugetToolsPackage/CI.Tools.Package/build/tasks/net461/
 src/dotnet/Mgmt.CI.BuildTools/NugetToolsPackage/CI.Tools.Package/build/tasks/netstandard2.0
 
+# local settings
+.DS_Store
+.vscode
+
+# npm pack artifacts
+*.tgz
+
 # Visual Studio launch settings (frequently user-specific)
 launchSettings.json
