Add documentation to each existing rule (#74)
* add ts-config-allowsyntheticdefaultimports docs

* add docs folder to package contents

* add ts-config-declaration docs

* add ts-config-esmoduleinterop docs

* add ts-config-exclude docs

* add ts-config-forceconsistentcasinginfilenames docs

* add ts-config-importhelpers docs

* add ts-config-isolatedmodules docs

* add ts-config-lib docs

* add ts-config-module docs

* add ts-config-no-experimental-decorators docs

* add ts-config-sourcemap docs

* fix typo

* add ts-config-strict docs

* add ts-package-json-author docs

* add ts-package-json-bugs docs

* add ts-package-json-homepage docs

* add ts-package-json-keywords docs

* add ts-package-json-license docs

* add ts-package-json-name docs

* add ts-package-json-name docs

* add ts-package-json-repo docs

* add ts-package-json-required-scripts docs

* add ts-package-json-sideeffects docs

* fix typos

--- a/tools/eslint-plugin-azure-sdk/package.json
+++ b/tools/eslint-plugin-azure-sdk/package.json
@@ -23,14 +23,16 @@
   "homepage": "https://github.com/Azure/azure-sdk-tools/src/ts/eslint-plugin-azure-sdk",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Azure/azure-sdk-tools"
+    "url": "https://github.com/Azure/azure-sdk-tools.git",
+    "directory": "tools/eslint-plugin-azure-sdk"
   },
   "bugs": {
     "url": "https://github.com/Azure/azure-sdk-tools/issues"
   },
   "main": "dist/index.js",
   "files": [
-    "dist"
+    "dist",
+    "docs"
   ],
   "scripts": {
     "build": "npm run clean && npm run format && tsc -p tsconfig.build.json",
